fix: secure authentication and resource ownership